--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ scikit-learn==1.2.2
 statsmodels==0.13.5
 pytest==7.3.1
 xgboost==1.7.6
-
 aiofiles==22.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
@@ -155,3 +154,4 @@ y-py==0.6.2
 yarl==1.18.3
 ypy-websocket==0.8.4
 zipp==3.21.0
+gunicorn
