--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,3 @@
-altair==5.0.1
-jupyterlab==3.6.3
-ipywidgets==8.0.6
-matplotlib==3.7.1
-seaborn==0.12.2
-numpy==1.24.3
-pandas==2.0.1
-jupyterlab-dash==0.1.0a3
-scikit-learn==1.2.2
-statsmodels==0.13.5
-pytest==7.3.1
-xgboost==1.7.6
 aiofiles==22.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
@@ -42,6 +30,7 @@ entrypoints==0.4
 executing==2.2.0
 fastjsonschema==2.21.1
 Flask==3.0.3
+flask-cors==5.0.1
 fonttools==4.57.0
 fqdn==1.5.1
 frozenlist==1.5.0
@@ -154,4 +143,3 @@ y-py==0.6.2
 yarl==1.18.3
 ypy-websocket==0.8.4
 zipp==3.21.0
-gunicorn
